static/css/main.css
@font-face {
  font-family: 'Inter var';
  font-weight: 100 900;
  font-display: swap;
  font-style: normal;
  font-named-instance: 'Regular';
  src: url("/fonts/Inter-roman.var.woff2?v=3.19") format("woff2");
}

@font-face {
  font-family: 'Inter var';
  font-weight: 100 900;
  font-display: swap;
  font-style: italic;
  font-named-instance: 'Italic';
  src: url("/fonts/Inter-italic.var.woff2?v=3.19") format("woff2");
}

html { font-family: 'Inter', sans-serif; }
@supports (font-variation-settings: normal) {
  html { font-family: 'Inter var', sans-serif; }
}

body {
  color: #2a2a2a;
  font-size: 18px;
  line-height: 1.5;
}

.site-wrapper {
  max-width: 40rem;
  margin: 0 auto;
}


/* SHORT POSTS */

.short-post {
  border: 1px solid #ddd;
  border-radius: 4px;
  box-sizing: border-box;
  margin: 2rem 0;
}

.short-post .e-content p {
  margin: .6rem 0;
}

.short-post .e-content p:first-child {
  margin-top: 0;
}

.short-post .e-content p:last-child {
  margin-bottom: 0;
}

.short-post .e-content ul {
  margin: 0;
  padding: 0 1.2rem;
}

.short-post .e-content ol {
  margin: 0;
  padding: 0 1.5rem;
}

.short-post .post-meta {
  padding: .6rem 1rem 0;
  font-size: .8rem;
}

.short-post .e-content {
  padding: .6rem 1rem 1rem;
}

.short-post .mb-post-icon {
  position: relative;
  top: 4px;
  margin-right: 3px;
}

